# vOscillation

./: .gitignore  CMakeLists.txt  Class_Diagram.mdj  README.md  Untitled.mdj  vClass.hh  vOscillating.md  vOscillation.hh
Markdown/: vEnergySpectrum.md  vModelGenerator.md  vOscillating.md
example/: .print_F_sigma_Reactor.C.swp  .print_Pee.C.swp  FluxCalculator.cc  FluxCalculator.hh  ModelGenerator.C  ModelGenerator_Reactor.C  ModelGenerator_Sterile.C  ModelGenerator_SterileFast.C  Model_NoOsc_dx_8.20_resol_E0.050L0.120.root  Model_NoOsc_dx_9.40_resol_E0.050L0.120.root  Model_Sterile_dx_9.50_resol_E0.050L0.120_Dm2_1.00e+02.root  Model_Sterile_dx_9.50_resol_E0.050L0.120_Dm2_1.00e-02.root  PlotDetectedReactorSimple.C  PlotDetectedSolarSimple.C  PlotFullSolar.C  PlotIBD.C  PlotOscillating.C  PlotReactorFlux.C  PlotScatteringve.C  PlotSolarFlux.C  PlotSterile.C  evtgen_reactor.cc  evtgen_source.cc  print_F_E_Reactor.C  print_F_L_Reactor.C  print_F_sigma_Reactor.C  print_Pee.C
header/: vBetaSpectrum.hh  vCe144Spectrum.hh  vConstant.hh  vDetector.hh  vDetectorCylinder.hh  vDetectorSphere.hh  vEnergySpectrum.hh  vEventGenerator.hh  vIBD.hh  vInterpolator.hh  vModelGenerator.hh  vModelGeneratorLBL.hh  vModelGeneratorSterileEE.hh  vNeutrinoSpectrum.hh  vOscillating.hh  vOscillation.hh  vReactorSpectrum.hh  vScatteringve.hh  vSolarFlux.hh  vSource.hh  vSourceCylinder.hh  vSourceSphere.hh  vSterile.hh  vSterileEE.hh
src/: vBetaSpectrum.cc  vCR_IBD.hh  vClass.hh  vConstant.cc  vConstant.hh  vCrossSection.cc  vCrossSection.hh  vDetector.cc  vDetectorCylinder.cc  vDetectorSphere.cc  vIBD.cc  (+20 more)
